# MeshUtility

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  __init__.py  build.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: wheels.yml
meshutility/: __init__.py  cameras.py  colormap.py  face_centers.py  mesh2graph.py  mesh_cut.py  mesh_split.py  obj_lines_io.py  remove_unreferenced.py  split_connected_components.py
src/: .gitignore  CMakeLists.txt  isocurve.py  mesh_cut.py  mesh_split.py  sphere_cvt.py  write_obj_lines.py
src/OpenMesh/: CMakeLists.txt
src/pygeodesic/: CMakeLists.txt  fm.cpp  fm.h  main.cpp  mmp_wrapper.cpp  mmp_wrapper.h
src/pyisocurve/: CMakeLists.txt  isocurve.cpp  isocurve.h  main.cpp
src/pyremesh/: CMakeLists.txt  IncrementalRemesher.cpp  IncrementalRemesher.h  PolylineBranch.cpp  PolylineBranch.h  PolylineNetwork.cpp  PolylineNetwork.h  pyremesh.cpp
src/pyshapeop/: CMakeLists.txt  pyshapeop.cpp  solverapi.cpp  solverapi.h
src/utils/: CMakeLists.txt  utils.cpp
tests/: meshutility-tutorial.ipynb  test_cut.py  test_pygeodesic.py  test_pyisocurve.py  test_pyremesh.py  test_sphere_cvt.py  test_split_cut.py  tutorial.ipynb
tests/attic/: test_isocurve.py  test_mesh2graph.py  test_split_cut.py  tutorial.ipynb
